--- a/main.css
+++ b/main.css
@@ -59,9 +59,15 @@ hr {
 
 li {
   list-style: none;
-  padding-left: 0;
+  padding: 0.75rem;
+}
+
+li:nth-child(odd) {
+  background-color: #304a8d;
 }
 
 ul {
-  padding-left: 1rem;
+  padding-left: 0;
+  max-height: 500px;
+  overflow: auto;
 }
